--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,6 @@
         xmlns:local="clr-namespace:_2048"
         mc:Ignorable="d"
         Title="2048" Height="800" Width="600"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Canvas x:Name="canvas" />
 </Window>
