--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:_2048"
         mc:Ignorable="d"
         Title="2048" Height="800" Width="600"
-        ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Closing="OnWindowClose">
+    <!--This is the canvas where the game is played. -->
     <Canvas x:Name="canvas" />
 </Window>
